--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,9 @@
 before_script:
   - docker info
 
-build:
-  stage: build
+test:
+  stage: test
   script:
-    - docker build -t prodex/web:test -f ./dockerfiles/Dockerfile.review .
     - docker build -t prodex/web:jest -f ./dockerfiles/Dockerfile.test .
     - docker create prodex/web:jest
     - docker cp $(docker ps -alq):/usr/src/app/junit.xml .
@@ -81,6 +80,6 @@ cleanup:
   stage: .post
   when: always
   script:
-    - docker rmi $(docker images -q prodex/web:jest) || exit 0
-    - docker rmi $(docker images -q prodex/web:test) || exit 0
-    - docker system prune --volumes -f || exit 0
+    - docker rmi $(docker images -q prodex/web:jest) || echo "Everything cleared"
+    - docker rmi $(docker images -q prodex/web:test) || echo "Everything cleared"
+    - docker system prune --volumes -f || echo "Everything cleared"
