--- a/package.json
+++ b/package.json
@@ -103,7 +103,9 @@
     "semantic": "cd semantic && gulp watch",
     "docs": "jsdoc -c ./jsdoc.json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "cypress:test": "npx cypress run --headed -b chrome --reporter junit",
+    "cypress:open": "cypress open"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
@@ -111,6 +113,8 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.0",
     "check-prop-types": "^1.1.2",
+    "cypress": "^8.7.0",
+    "cypress-file-upload": "^5.0.8",
     "enzyme": "^3.11.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -120,6 +124,8 @@
     "gulp": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.2.0",
+    "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "moxios": "^0.4.0",
     "redux-mock-store": "^1.5.4",
     "semantic-ui": "^2.4.2",
