--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.3.4",
+    "@babel/core": "^7.16.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@devexpress/dx-core": "^1.11.0",
     "@devexpress/dx-grid-core": "^1.11.0",
@@ -11,24 +11,24 @@
     "@devexpress/dx-react-grid": "^1.11.0",
     "@devexpress/dx-react-grid-bootstrap4": "^1.11.0",
     "@fingerprintjs/fingerprintjs": "^3.3.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^3.0.2",
-    "@next/bundle-analyzer": "^10.2.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@next/bundle-analyzer": "^10.2.3",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "better-docs": "^2.3.2",
-    "classnames": "^2.2.6",
+    "classnames": "^2.3.1",
     "cookie-parser": "^1.4.4",
-    "css-loader": "^5.0.1",
-    "date-fns": "^2.16.1",
+    "css-loader": "^5.2.7",
+    "date-fns": "^2.25.0",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "ein-validator": "^1.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "express": "^4.16.4",
     "fibers": "^3.1.0",
     "file-loader": "^3.0.1",
@@ -36,62 +36,62 @@
     "formik-semantic-ui-fixed-validation": "^0.10.2",
     "http-proxy-middleware": "^0.19.1",
     "js-cookie": "^2.2.0",
-    "jsdoc": "^3.6.6",
-    "lodash": "^4.17.20",
+    "jsdoc": "^3.6.7",
+    "lodash": "^4.17.21",
     "md5": "^2.2.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.3.2",
-    "moment-timezone": "^0.5.33",
-    "next": "^10.2.0",
+    "moment-timezone": "^0.5.34",
+    "next": "^10.2.3",
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
     "node-sass-chokidar": "^1.3.4",
     "nprogress": "^0.2.0",
-    "postcss": "^8.1.0",
+    "postcss": "^8.3.11",
     "prop-types": "^15.6.2",
     "react": "^17.0.1",
     "react-autosize-textarea": "^7.1.0",
-    "react-calendar": "^3.1.0",
-    "react-confirm": "^0.1.20",
-    "react-datepicker": "^3.4.1",
+    "react-calendar": "^3.5.0",
+    "react-confirm": "^0.1.24",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^5.1.1",
     "react-feather": "^2.0.9",
     "react-gtm-module": "^2.0.11",
     "react-html-parser": "^2.0.2",
     "react-input-mask": "^3.0.0-alpha.2",
-    "react-intl": "^5.12.0",
+    "react-intl": "^5.21.1",
     "react-perfect-scrollbar": "^1.4.2",
-    "react-plaid-link": "^3.1.0",
+    "react-plaid-link": "^3.2.1",
     "react-popper": "^2.2.4",
     "react-redux": "^5.1.2",
     "react-redux-form": "^1.16.14",
     "react-textarea-autosize": "^7.1.2",
-    "react-toast-notifications": "^2.4.0",
-    "recharts": "^2.0.10",
+    "react-toast-notifications": "^2.5.1",
+    "recharts": "^2.1.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^5.0.0",
     "redux-promise-middleware-actions": "^2.1.0",
     "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.0",
     "request": "^2.88.0",
-    "reselect": "^4.0.0",
-    "sass": "^1.3.0",
+    "reselect": "^4.1.2",
+    "sass": "^1.43.4",
     "sass-loader": "^7.1.0",
-    "semantic-ui-calendar-react-yz": "^0.16.4",
+    "semantic-ui-calendar-react-yz": "^0.16.5",
     "semantic-ui-react": "^0.86.0",
     "shortid": "^2.2.14",
     "styled-components": "5.2.1",
-    "styled-jsx": "^3.4.1",
+    "styled-jsx": "^3.4.7",
     "tree-model": "^1.0.7",
     "type-to-reducer": "^1.1.0",
     "universal-cookie": "^4.0.3",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.6",
-    "xlsx": "^0.12.13",
-    "yup": "^0.27.0"
+    "xlsx": "^0.17.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "dev": "node --max-old-space-size=8192 server.js",
@@ -103,24 +103,26 @@
     "semantic": "cd semantic && gulp watch",
     "docs": "jsdoc -c ./jsdoc.json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "preinstall": "npx npm-force-resolutions"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "@types/jest": "^26.0.24",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.10.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.27.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "fetch-mock": "^9.11.0",
     "gulp": "^3.0.0",
     "jest": "^26.6.3",
-    "jest-junit": "^12.2.0",
+    "jest-junit": "^12.3.0",
     "moxios": "^0.4.0",
+    "npm-force-resolutions": "0.0.10",
     "redux-mock-store": "^1.5.4",
     "semantic-ui": "^2.4.2",
     "svg-jest": "^1.0.1"
@@ -143,5 +145,9 @@
       "^~/(.*)$": "<rootDir>/$1"
     },
     "resetMocks": false
+  },
+  "resolutions": {
+    "lodash": "^4.17.21",
+    "lodash.template": "^4.5.0"
   }
 }
