--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "next-cookies": "^1.1.2",
     "next-redux-wrapper": "^2.0.0",
     "next-routes": "^1.4.2",
-    "node-sass-chokidar": "^1.3.4",
+    "node-sass-chokidar": "^1.5.0",
     "nprogress": "^0.2.0",
     "postcss": "^8.3.11",
     "prop-types": "^15.6.2",
@@ -119,8 +119,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "fetch-mock": "^9.11.0",
     "gulp": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-junit": "^12.3.0",
+    "jest": "^27.4.7",
+    "jest-junit": "^13.0.0",
     "moxios": "^0.4.0",
     "npm-force-resolutions": "0.0.10",
     "redux-mock-store": "^1.5.4",
@@ -148,6 +148,7 @@
   },
   "resolutions": {
     "lodash": "^4.17.21",
-    "lodash.template": "^4.5.0"
+    "lodash.template": "^4.5.0",
+    "tar": "^6.1.11"
   }
 }
