--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
     "moxios": "^0.4.0",
+    "npm-check": "^5.9.2",
     "npm-force-resolutions": "0.0.10",
     "redux-mock-store": "^1.5.4",
     "svg-jest": "^1.0.1"
