--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "file-loader": "^3.0.1",
     "formik": "^2.2.9",
     "formik-semantic-ui-fixed-validation": "^0.10.2",
-    "http-proxy-middleware": "^0.19.1",
+    "http-proxy-middleware": "^2.0.1",
     "js-cookie": "^2.2.0",
     "jsdoc": "^3.6.7",
     "lodash": "^4.17.21",
@@ -70,10 +70,10 @@
     "react-textarea-autosize": "^7.1.2",
     "react-toast-notifications": "^2.5.1",
     "recharts": "^2.1.6",
-    "redux": "^3.7.2",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-promise-middleware": "^5.0.0",
-    "redux-promise-middleware-actions": "^2.1.0",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-promise-middleware-actions": "^3.1.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.4.0",
     "request": "^2.88.0",
@@ -84,11 +84,11 @@
     "semantic-ui-react": "^2.0.4",
     "shortid": "^2.2.14",
     "styled-components": "5.2.1",
-    "styled-jsx": "^3.4.7",
+    "styled-jsx": "^4.0.1",
     "tree-model": "^1.0.7",
     "type-to-reducer": "^1.1.0",
     "universal-cookie": "^4.0.3",
-    "url-loader": "^1.1.2",
+    "url-loader": "^4.1.1",
     "webpack": "^4.29.6",
     "xlsx": "^0.17.3",
     "yup": "^0.32.11"
@@ -107,21 +107,22 @@
     "preinstall": "npx npm-force-resolutions"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.2",
     "check-prop-types": "^1.1.2",
     "enzyme": "^3.11.0",
-    "eslint": "^8.6.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "fetch-mock": "^9.11.0",
-    "gulp": "^3.0.0",
+    "gulp": "^4.0.2",
     "jest": "^27.4.7",
     "jest-junit": "^13.0.0",
     "moxios": "^0.4.0",
+    "npm-check": "^5.9.2",
     "npm-force-resolutions": "0.0.10",
     "redux-mock-store": "^1.5.4",
     "svg-jest": "^1.0.1"
